--- a/frontend/css/chat.css
+++ b/frontend/css/chat.css
@@ -31,7 +31,7 @@
 
 /* Chat Header */
 #chatBoxHeader {
-    background-color: #273944;
+    background-color: #273945;
     color: #b5bac1;
     padding: 12px;
     font-weight: bold;
@@ -43,18 +43,20 @@
 
 /* Chat Messages - Scrollable */
 #chatMessages {
-    flex-grow: 1;
+	display: flex;
+    flex-direction: column-reverse;
+	align-items: end;
     overflow-y: auto;
+    height: 270px;
     padding: 10px;
 }
 
 /* Input Area */
 #chatInputArea {
-	margin-top: 210px;
-    display: flex;
-    align-items: center;
+	width: 400px;
+	position: fixed;
+	bottom: 0px;
     background-color: #22333d;
-    padding: 10px;
     border-top: 1px solid #232428;
 }
 
@@ -86,6 +88,7 @@
 #chatForm {
     display: flex;
     align-items: center;
+	width: 100%;
     gap: 10px; /* Space between input & button */
 }
 
@@ -98,8 +101,6 @@
     padding: 10px;
     background-color: #1e1f22;
     text-align: center;
-    border-bottom-left-radius: 8px;
-    border-bottom-right-radius: 8px;
 }
 
 #inviteButton {
@@ -151,6 +152,43 @@
 	height: 20px;
     text-align: center;
     /* box-shadow: 0 0 5px rgba(0, 0, 0, 0.2); */
+}
+
+.chat-container {
+	max-width: 600px;
+	margin: 20px auto;
+	padding: 20px;
+	background: #23272a;
+	border-radius: 8px;
+}
+
+.chat-message {
+	padding: 10px;
+	border-top: 1px solid #344b5b;
+	width: 100%;
+}
+
+.chat-avatar {
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+	margin-right: 10px;
+}
+.chat-content {
+	background: transparent;
+}
+.chat-username {
+	font-weight: bold;
+	color: #ffffff;
+}
+.chat-text {
+	color: #b9bbbe;
+	margin-top: 2px;
+}
+.chat-timestamp {
+	font-size: 0.8rem;
+	color: #72767d;
+	margin-left: 5px;
 }
 
 /* Animation for fade-in effect */
