--- a/frontend/css/chat.css
+++ b/frontend/css/chat.css
@@ -122,7 +122,7 @@
     background-color: #2e7c47;
 }
 
-.incoming-message-popup {
+.incoming-message-popup{
     position: fixed;
     bottom: 20px;
     right: 0px;
@@ -164,7 +164,7 @@
 	border-radius: 8px;
 }
 
-.chat-message {
+.chat-message, .game-invitation-popup {
 	padding: 10px;
 	border-top: 1px solid #344b5b;
 	/* width: 100%; */
