--- a/frontend/css/chat.css
+++ b/frontend/css/chat.css
@@ -144,7 +144,7 @@
     color: white;
     font-size: 0.75rem;
     font-weight: bold;
-    padding: 2px 6px;
+    /* padding: 2px 6px; */
     border-radius: 100%;
 	/* border: 3px solid #1C3644; */
     width: 20px;
