--- a/frontend/css/game.css
+++ b/frontend/css/game.css
@@ -1,7 +1,13 @@
-body {
+/* body {
 	background-color: #0F0F10;
 	color: #ffffff;
 	font-family: Arial, sans-serif;
+} */
+
+canvas {
+	border: 2px solid #000;
+	display: block;
+	margin: auto;
 }
 .card-custom {
 	background-color: #1B1C1E;
